--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             </li>
             <li class="list-item">
                 <div class="list-item__imagem">
-                    <img src="img/1.jpg" alt="Catarina Silva">
+                    <img src="img/2.jpg" alt="Renata Oliveira">
                 </div>
 
                 <div class="list-item__content">
                     <p class="list-item__name">
-                        Catarina Silva
+                        Rosangela Oliveira
                     </p>
-                    <p class="list-item__email">catarina.silva@exemple.com</p>
+                    <p class="list-item__email">rosangela.oliveira@exemple.com</p>
                 </div>
 
                 <div class="list-item__action">
@@ -54,14 +54,14 @@
 
             <li class="list-item">
                 <div class="list-item__imagem">
-                    <img src="img/1.jpg" alt="Catarina Silva">
+                    <img src="img/3.jpg" alt="Veronica Borges">
                 </div>
 
                 <div class="list-item__content">
                     <p class="list-item__name">
-                        Catarina Silva
+                        Veronica Borges
                     </p>
-                    <p class="list-item__email">catarina.silva@exemple.com</p>
+                    <p class="list-item__email">veronica.borges@exemple.com</p>
                 </div>
 
                 <div class="list-item__action">
@@ -72,14 +72,14 @@
 
             <li class="list-item">
                 <div class="list-item__imagem">
-                    <img src="img/1.jpg" alt="Catarina Silva">
+                    <img src="img/4.jpg" alt="Kleber Santos">
                 </div>
 
                 <div class="list-item__content">
                     <p class="list-item__name">
-                        Catarina Silva
+                        Kleber Santos
                     </p>
-                    <p class="list-item__email">catarina.silva@exemple.com</p>
+                    <p class="list-item__email">kleber.santos@exemple.com</p>
                 </div>
 
                 <div class="list-item__action">
@@ -90,14 +90,14 @@
 
             <li class="list-item">
                 <div class="list-item__imagem">
-                    <img src="img/1.jpg" alt="Catarina Silva">
+                    <img src="img/5.jpg" alt="Roberto Gusmão">
                 </div>
 
                 <div class="list-item__content">
                     <p class="list-item__name">
-                        Catarina Silva
+                        Roberto Gusmão
                     </p>
-                    <p class="list-item__email">catarina.silva@exemple.com</p>
+                    <p class="list-item__email">roberto.gusmao@exemple.com</p>
                 </div>
 
                 <div class="list-item__action">
@@ -108,14 +108,14 @@
 
             <li class="list-item">
                 <div class="list-item__imagem">
-                    <img src="img/1.jpg" alt="Catarina Silva">
+                    <img src="img/6.jpg" alt="Antonia Batista">
                 </div>
 
                 <div class="list-item__content">
                     <p class="list-item__name">
-                        Catarina Silva
+                        Antonia Batista
                     </p>
-                    <p class="list-item__email">catarina.silva@exemple.com</p>
+                    <p class="list-item__email">antonia.batista@exemple.com</p>
                 </div>
 
                 <div class="list-item__action">
@@ -126,14 +126,14 @@
 
             <li class="list-item">
                 <div class="list-item__imagem">
-                    <img src="img/1.jpg" alt="Catarina Silva">
+                    <img src="img/7.jpg" alt="Eduardo Pereira">
                 </div>
 
                 <div class="list-item__content">
                     <p class="list-item__name">
-                        Catarina Silva
+                        Eduardo Pereira
                     </p>
-                    <p class="list-item__email">catarina.silva@exemple.com</p>
+                    <p class="list-item__email">dudu.pereira@exemple.com</p>
                 </div>
 
                 <div class="list-item__action">
@@ -144,14 +144,14 @@
 
             <li class="list-item">
                 <div class="list-item__imagem">
-                    <img src="img/1.jpg" alt="Catarina Silva">
+                    <img src="img/8.jpg" alt="Vitoria Silveira">
                 </div>
 
                 <div class="list-item__content">
                     <p class="list-item__name">
-                        Catarina Silva
+                        Vitoria Silveira
                     </p>
-                    <p class="list-item__email">catarina.silva@exemple.com</p>
+                    <p class="list-item__email">vivi.silveira@exemple.com</p>
                 </div>
 
                 <div class="list-item__action">
@@ -162,14 +162,14 @@
 
             <li class="list-item">
                 <div class="list-item__imagem">
-                    <img src="img/1.jpg" alt="Catarina Silva">
+                    <img src="img/9.jpg" alt="Douglas Costa">
                 </div>
 
                 <div class="list-item__content">
                     <p class="list-item__name">
-                        Catarina Silva
+                        Douglas Costa
                     </p>
-                    <p class="list-item__email">catarina.silva@exemple.com</p>
+                    <p class="list-item__email">doug.costa@exemple.com</p>
                 </div>
 
                 <div class="list-item__action">
@@ -180,14 +180,14 @@
 
             <li class="list-item">
                 <div class="list-item__imagem">
-                    <img src="img/1.jpg" alt="Catarina Silva">
+                    <img src="img/10.jpg" alt="Samuel Felisberto">
                 </div>
 
                 <div class="list-item__content">
                     <p class="list-item__name">
-                        Catarina Silva
+                        Samuel Felisberto
                     </p>
-                    <p class="list-item__email">catarina.silva@exemple.com</p>
+                    <p class="list-item__email">samuca.felis@exemple.com</p>
                 </div>
 
                 <div class="list-item__action">
